# SoftwareDevelopmentforGNULinux

03_Multifile/: Makefile
03_TerminalProject/: Show.c
04_Text/: README  okt.txt  randomize.sh
05_Debugging/: Makefile  README.md  range.c  test1.gdb  test2.gdb
06_TracingFencing/: Makefile  README.md  move.c  protect.c  source.txt  tests.sh
07_Environmental/: Makefile.am  README.md  configure.ac  rhasher.c  test.sh
08_Regexps/: Makefile.am  README.md  configure.ac  esub.c  test.sh
09_Testing/: README.md  configure.ac
09_Testing/src/: libbuf.c
09_Testing/tests/: Makefile.am  grow_test.ts  init_test.ts  noop_test.ts
10_I18n/: Makefile.am  README.md  binsearch.c  binsearch.pot  ru.po
11_Documenting/: Doxyfile.in  Makefile.am  README.md  binsearch.c  binsearch.md  configure.ac  ru.po
12_PatchInstall/: Makefile.am  README.md  binsearch.c  configure.ac  ru.po
